--- a/index.html
+++ b/index.html
@@ -40,17 +40,20 @@
     <body>
 
         <!-- Add your site or application content here -->
-        <video width="320" height="240" controls>
-  			<source src="movie.mp4" type="video/mp4">
-  			<source src="movie.ogg" type="video/ogg">
-  			Your browser does not support the video tag.
-		</video>
-		<video width="320" height="240" controls>
+        <h1 style="margin-left:20px; margin: 40px 30px 40px 30px; font-family: Verdana sans-serif; color: #333333;">This is a small video of the café Nikan in Düsseldorf. You can enjoy really delicious breakfast in an atmosphere that is nice, familiar and extraordinary at the same time. Come around and enjoy! :)</h1>
+        <div class="video" style="border: 1px solid #898; box-shadow: 10px 10px 10px; box-shadow: 5px 5px 3px #888; border-radius: 5px; width:320px; height: 240px; margin:auto;">
+	        <video width="320" height="240" controls>
+	  			<source src="video/cafe_nikan.mp4" type="video/mp4">
+	  			<source src="video/cafe_nikan.ogv" type="video/ogg">
+	  			Your browser does not support the video tag.
+			</video>
+		</div>
+		<!-- <video width="320" height="240" controls>
 			<source src="forrest_gump.mp4" type="video/mp4">
 			<source src="forrest_gump.ogg" type="video/ogg">
 			<track src="subtitles_en.vtt" kind="subtitles" srclang="en" label="English">
 			<track src="subtitles_no.vtt" kind="subtitles" srclang="no" label="Norwegian">
-		</video>
+		</video> -->
 
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
